--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Document</title>
     </head>
     <body style="width: 100%, height: 100%; margin:0;" >
-       <iframe src="https://docs.google.com/gview?url=&embedded=true" style="width:100%; height:100%; margin:0;" frameborder="0"></iframe>
+       <iframe src="https://docs.google.com/gview?url=https://github.com/kaydo1506/resume/raw/main/Resume%20Dev%20-%20Ify%20Okedo.pdf&embedded=true" style="width:100%; height:100%; margin:0;" frameborder="0"></iframe>
     </body>
     <script type="text/javascript" src="/script.js"></script>
 </html>
