--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Ify's resume</title>
     </head>
     <body style="width: 100%, height: 100%; margin:0;" >
        <iframe src="https://docs.google.com/gview?url=https://github.com/kaydo1506/resume/raw/main/Resume%20Dev%20-%20Ify%20Okedo.pdf&embedded=true" style="width:100%; height:100%; margin:0;" frameborder="0"></iframe>
