--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="width: 100%, height: 100%;">
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="content-type" content=text/html"; charset="UTF-8" />
         <title>Ify's resume</title>
     </head>
     <body style="width: 100%, height: 100%; margin:0" >
        <iframe src="https://docs.google.com/gview?url=https://github.com/kaydo1506/resume/raw/main/Resume%20Dev%20-%20Ify%20Okedo.pdf&embedded=true" style="width:100%; height:100%; margin:0"></iframe>
     </body>
-    <script type="text/javascript" src="/script.js"></script>
 </html>
